<resources>
    <string name="app_name">Evernote</string>
    <string name="Login1">Login</string>
    <string name="Pictures">Pictures</string>

    <string name="Reminders">Reminders</string>
    <string name="Add_your_files_here">Add your Files here</string>
    <string name="Add_your_reminders">Add your reminders</string>
    <string name="Email_ID">Email_ID</string>
    <string name="Password">Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Not_yet_created_an_account_Signup">Not yet created an account?Signup</string>
    <string name="name">name</string>
    <string name="Username">UserName</string>
    <string name="Email2">Email</string>
    <string name="Name3">Name</string>
    <string name="Password1">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Notes">Notes</string>
    <string name="Images">Images</string>
    <string name="Links">Links</string>
    <string name="Add_your_link_here">Add your link here</string>
    <string name="Add_your_images">Add your Images</string>
    <string name="Add_your_notes_here">Add your notes here</string>
    <string name="Register">Register</string>
    <string name="search_here">search here</string>
    <string name="Click">Click</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Age">Age</string>
    <string name="Contact">Contact</string>
    <string name="Videos">Videos</string>
    <string name="Notes_activity">Notes Activity</string>
    <string name="Audios">Audios</string>
    <string name="Files">Files</string>
    <string name="Send_email">Send Email</string>
    <string name="Email">Email</string>
    <string name="Reset_password">Reset Password</string>
    <string name="Forget_password4">Forget password</string>
    <string name="Enter_the_code_received">Enter the code received</string>
    <string name="Enter_otp">Enter OTP</string>
    <string name="confirm">confirm</string>
    <string name="Confirm1">Confirm</string>
    <string name="Choose1">Choose</string>
    <string name="TODO1">TODO</string>
    <string name="Upload">UPLOAD</string>
    <string name="Pictures1">Pictures</string>
    <string name="Add">Add</string>
    <string name="Choose2">Choose</string>
    <string name="UPLOAD1">UPLOAD</string>
    <string name="choose">choose</string>
    <string name="Choose_file1">Choose file</string>
    <string name="Show_uploads">Show Uploads</string>
    <string name="Enter_file_name">Enter file name</string>
    <string name="UPLOAD">UPLOAD</string>
    <string name="todo">TODO</string>
    <string name="Add1">Add</string>
    <string name="Notes2">Notes</string>
    <string name="Important_notes">Important notes</string>
    <string name="Go">go</string>
    <string name="Select1">select</string>
    <string name="Chooses_file">Choose file</string>
    <string name="Upload_file">upload file</string>
    <string name="Show_file">Show file</string>
    <string name="Upload_video">upload video</string>
    <string name="Choose_image">Choose Image</string>
    <string name="Enter_image_name_here">Enter Image Name Here</string>
    <string name="Upload_image_to_firebase_storage">Upload image to Firebase Storage</string>
    <string name="Show_all_uploaded_images">Show All Uploaded Images</string>
    <string name="Todo1">TODO</string>
    <string name="View">view</string>
    <string name="Name4">Name</string>
    <string name="TODO">TODO</string>
    <string name="Choose">Choose</string>
    <string name="View_uploads1">View Uploads</string>
    <string name="Uploads">Uploads</string>
    <string name="Enter_name_for_image">Enter name for Image</string>
    <string name="Todo5">TODO</string>
    <string name="Send_mail">Send mail</string>
    <string name="Forget_password">Forget password</string>
    <string name="Select">select</string>
    <string name="Names">Names</string>
    <string name="Todo3">TODO3</string>
    <string name="View_uploads">View Uploads</string>
    <string name="No_file_selected">No file selected</string>
    <string name="Upload_pdf">Upload PDF</string>
    <string name="Enter_a_name_for_your_file">Enter a name for your file</string>
    <string name="Show_uploads4">Show Uploads</string>
    <string name="Include1">Upload</string>
    <string name="Todo7">TODO</string>
    <string name="Enter_file_name2">Enter file name</string>
    <string name="Choose_file">Choose file</string>
    <string name="Choose3">Choose</string>
    <string name="Enter_files_name">Enter_files_name</string>
    <string name="Files_name">Files_name</string>
    <string name="File_name">File name</string>
    <string name="Name_of_the_file">Name of the file</string>
    <string name="Choose_files">Choose files</string>
    <string name="Show">Show</string>
    <string name="Include">Include</string>
    <string name="Todo6">TODO</string>
    <string name="Enter_the_name">Enter the name</string>
    <string name="Name2">Name</string>
    <string name="Todo8">TODO</string>
    <string name="Name5">Name</string>
    <string name="Todo">TODO</string>
    <string name="User">User</string>
    <string name="View_uploads3">View Uploads</string>
    <string name="No_file_selected1">No file selected</string>
    <string name="Upload_pdf2">Upload PDF</string>
    <string name="Enter_a_name_for_your_file3">Enter a name for your file</string>
    <string name="Submit">Submit</string>
    <string name="Welcome">Welcome</string>
    <string name="Fetch">Fetch</string>
    <string name="Search">Search</string>
    <string name="Find_the_url">Find the url</string>
    <string name="Firebase_image_upload_tutorial">Firebase Image Upload Tutorial</string>
    <string name="Choose_image1">Choose Image</string>
    <string name="Enter_image_name_here1">Enter Image Name Here</string>
    <string name="Nam">Nam</string>
    <string name="Sselect_file">Select File</string>
    <string name="Add3">Add</string>
    <string name="No_file_select">No file select</string>
    <string name="Fetch1">Fetch</string>
    <string name="Firebase_image_upload_tutorial1">Firebase Image Upload Tutorial</string>
    <string name="Choose_image3">Choose Image</string>
    <string name="Todo11">TODO11</string>
    <string name="Show_all_uploaded_images2">Show All Uploaded Images</string>
    <string name="Upload_image_to_firebase_storage4">Upload image to Firebase Storage</string>
    <string name="Enter_image_name_here2">Enter Image Name Here</string>
    <string name="Json_image_name">JSon Image Name</string>
    <string name="Todo13">TODO13</string>
    <string name="Image_name">Image Name</string>
    <string name="Todo2">TODO</string>
    <string name="firebase_image_">Firebase Image</string>
    <string name="Show_all_uploaded_images3">Show All Uploaded Images</string>
    <string name="Upload_image_to_firebase_storage2">Upload image to Firebase Storage</string>
    <string name="Enter_image_name_here5">Enter Image Name Here</string>
    <string name="Choose_image7">Choose Image</string>
    <string name="Todo0">TODO</string>
    <string name="Send_sms">Send Sms</string>
    <string name="Download">Download</string>
    <string name="Include4">Include</string>
    <string name="Record">Record</string>
    <string name="Eenter">Enter</string>
    <string name="Ad">Ad</string>
    <string name="Aad">Ad</string>
    <string name="View_uploads4">View Uploads</string>
    <string name="No_file_selected4">No file selected</string>
    <string name="Upload_pdf4">Upload PDF</string>
    <string name="Enter_a_name_for_your_file4">Enter a name for your file</string>
    <string name="Todo22">TODO</string>
    <string name="Ttodo33">TODO</string>
    <string name="Ttodo44">TODO</string>
    <string name="IPL">IPL</string>
    <string name="Smileys">Smileys</string>
    <string name="First_bunk">First bunk</string>
    <string name="Todo44">TODO</string>
    <string name="Todo55">TODO</string>
    <string name="Todo66">TODO</string>
    <string name="Todo77">TODO</string>
    <string name="Todo88">TODO</string>
    <string name="Todo99">TODO</string>
    <string name="Todo23">TODO</string>
    <string name="Todo12">TODO</string>
    <string name="Todo34">TODO</string>
    <string name="Todo111">TODO</string>
    <string name="Todo35">TODO</string>
    <string name="Todo37">TODO</string>
    <string name="File">File</string>
    <string name="Todo234">TODO</string>
    <string name="Todo54">TODO</string>
    <string name="Todo98">TODO</string>
    <string name="Todo32">TODO</string>
    <string name="Todo45">TODO</string>
    <string name="Todo68">TODO</string>
    <string name="Documents">Documents</string>
    <string name="Welcome3">Welcome</string>
    <string name="Welcome4">Welcome</string>
    <string name="Welcome7">Welcome</string>
    <string name="Enter6">Enter</string>
    <string name="Add_notes">ADD NOTES</string>
    <string name="eEnter">Enter</string>
    <string name="Fetch5">Fetch</string>
    <string name="Enter8">Enter</string>
    <string name="Enter">Enter</string>
    <string name="Note5">Note</string>
    <string name="Note3">Note</string>
    <string name="Notes0">Notes</string>
    <string name="Note0">Note</string>
    <string name="Note">Note</string>
    <string name="Submit7">Submit</string>
    <string name="Fetch8">Fetch</string>
    <string name="Hint">hint</string>
    <string name="Textview">TextView</string>
    <string name="Fetch11">FETCH</string>
    <string name="Adds">ADD</string>
    <string name="WElcome">WElcome</string>
    <string name="NOTES">NOTES</string>
    <string name="Add0">Add</string>
    <string name="Fetch0">Fetch</string>
    <string name="Submit0">Submit</string>
    <string name="Notes9">Notes</string>
    <string name="include_to_firebase">include to firebase</string>
    <string name="Type_a_msg">Type a msg</string>
    <string name="name4">name</string>
    <string name="name8">name</string>
    <string name="FILE">FILE</string>
    <string name="Upload_Audio">Upload Audio</string>
    <string name="Upload_Image">Upload Image</string>
    <string name="Upload_Video">Upload Video</string>
    <string name="Enter_the_name_of_video">Enter the name of video</string>
    <string name="Enter_the_audio_file_name">Enter the audio file name</string>
    <string name="Phone_number">Phone number</string>
    <string name="Queries">Queries</string>
    <string name="Show_msg">show msg</string>
    <string name="Send_msg">Send msg</string>
</resources>
